wp-content/themes/premedia-theme/assets/sass/map.scss
// map.scss


:root :where(.is-layout-constrained)>.map-container {
    margin-top: 0;
}


.wp-block-group:has(.us-map) {
    background-color: #f9f9f9;
}


#map-container {
    overflow: hidden !important;
    background-color: white;
    //touch-action: none;
    user-select: none;
    //overflow: visible !important;
    touch-action: auto !important;
}

#us-map {
    touch-action: auto !important;
}

.us-map {
    max-width: 100%;
    height: auto;
    max-height: 61.8vw;
    display: block;
    margin: 0 auto;

    &:has(.svg-pan-zoom_viewport) {
        filter: blur(0rem) !important;
    }
}


.state path {
    fill: lightgray;
}

.borders path {
    stroke: white;
}


.map-pin-svg {
    pointer-events: none;
    filter: drop-shadow(-2px 5px 8px rgba(0, 0, 0, .3));
    @include scale(.67);
    @include transition(filter .2s ease-in-out);
}

// massaging the special case of case western 
.map-pin-svg:has(#case-western-metrohealth[aria-pressed="true"]),
.map-pin-svg:has(#case-western-metrohealth:hover),
.map-pin-svg:has(#case-western-metrohealth:active),
.map-pin-svg:has(#case-western-metrohealth:focus) {
    z-index: 10;
}

.map-pin:has(#case-western-metrohealth:hover)~.map-pin:has(#case-western-university) .map-pin-svg {
    filter: none;
}

.s2 {
    fill: $lightblue;
}

// map pin hover
.s2.map-pin-path {
    cursor: pointer;
    pointer-events: auto;
    @include transition(fill .2s ease-in-out);

    &[aria-pressed="true"] {
        fill: $golden;
    }

    @include hover {
        fill: $golden;
    }

    &:focus {
        outline: none;
    }

    &:focus-visible {
        outline: calc(5rem/16) auto -webkit-focus-ring-color;
        outline-offset: calc(2rem / 16);
    }
}

.s3 {
    fill: $navy;
    pointer-events: none;
}


html:has(.modal) {
    scrollbar-gutter: stable;
}

// body scroll lock when modal is open  ... 
html:has(.modal[open]) {
    overflow: hidden;
}


// modal
.modal {
    max-height: 100vh;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1001;
}

.modal:not([open]) {
    visibility: hidden;
}






// selected pin moves to front 
.map-pin:has(.map-pin-path[aria-pressed="true"]) {
    //z-index: 1000;
}


.modal[open] {
    position: fixed;
}

.modal[open]:focus-visible {
    outline: none;
}

#modal-nubbin {
    z-index: 1002;
}

#modal-nubbin:not([class*="points"]) {
    display: none;
}





// scroll modal if needed 
.modal-content {
    overflow-y: auto;
    position: relative;
    padding: 2rem 1.414rem 1.414rem;
    background-color: white;
    border-radius: .5rem;
    filter: drop-shadow(-2px 5px 8px rgba(0, 0, 0, .3));

    &:after {
        width: calc(100% - calc(4rem / 16));
        height: calc(100% - calc(4rem / 16));
        position: absolute;
        background-color: transparent;
        border: calc(2rem / 16) solid $navy;
        content: '';
        display: block;
        border-radius: .5rem;
        top: 0;
        left: 0;
        pointer-events: none;
    }

}


@media (min-width: $tablet) {
    .modal-content {
        width: calc(360rem / 16);
    }
}


@media (max-width: $narrower-than-tablet) {

    .modal[open] {
        @include has-before;
        position: fixed;

        &:before {
            width: 100%;
            height: 100vh;
            top: 0;
            left: 0;
            background-color: rgba(0, 0, 0, .7);
        }

    }

    #modal-nubbin {
        display: none;
    }

    .modal-content {
        max-width: calc(360rem / 16);
        width: calc(90% - calc(50rem / 16));
        margin: 0 auto;
        top: 50%;
        @include translate(0, -50%);
    }


}




#modal-nubbin {
    width: 1rem;
    height: 1rem;
    position: absolute;

    background-color: white;
    @include rotate(45deg);

    &.points-up {
        border-top: calc(2rem / 16) solid $navy;
        border-right: none;
        border-bottom: none;
        border-left: calc(2rem / 16) solid $navy;
    }

    &.points-down {
        border-top: none;
        border-right: calc(2rem / 16) solid $navy;
        border-bottom: calc(2rem / 16) solid $navy;
        border-left: none;
    }

}


// landscape phone - approximate height of form is 700px
/* 
@media (min-width: $tablet) and (max-height: calc(699rem / 16)) {
    .modal-content {
        width: 80%;
        margin: 4rem auto 0;
    }
}
*/





// close button
button.modal-close {
    width: 3rem;
    height: 3rem;

    position: absolute;
    top: 0;
    right: 0;

    background: none;
    border: none;
    cursor: pointer;
    font-size: calc(28rem / 16);
    font-weight: bold;

    -webkit-transition: color .2s ease-in-out;
    -moz-transition: color .2s ease-in-out;
    -ms-transition: color .2s ease-in-out;
    -o-transition: color .2s ease-in-out;
    transition: color .2s ease-in-out;
}

button.modal-close:hover,
button.modal-close:active,
button.modal-close:focus {
    color: $teal;
}




// modal content - physician data
$physician-size: 5rem;

.physician-div {
    @include flex;
    @include flex-direction-col;
    @include flex-wrap;
    height: calc(#{$physician-size} + 1rem);
}

.physician-name,
.physician-institution {
    width: calc(100% - #{$physician-size} - 2rem);
}

.physician-src {
    width: $physician-size;
    height: $physician-size;
    border: calc(3rem / 16) solid $lightblue;
    border-radius: 50%;
}


#clinic-site-name {
    color: $blue;
}

#clinic-site-city-state {
    margin-top: .3rem;
    color: $text;
}

.physician-name {
    color: $blue;
}

